# navigator-auth

./: .gitignore  .mypy.ini  .pylintrc  AGENTS.md  CHANGELOG.md  CHANGES.rst  CONTRIBUTING.md  Cargo.toml  MANIFEST.in  Makefile  README.md  app.py  pyproject.toml  setup.py  test_empty_redis.py  test_navigator.py  test_redis.py  test_server.py  test_vault.py
.agent/workflows/: sdd-brainstorm.md  sdd-spec.md  sdd-start.md  sdd-task.md
.github/workflows/: codeql-analysis.yml  release.yml
docs/: api.rst  changelog.rst  changes.rst  conf.py  config.rst  index.rst  policies.py  requirements-dev.txt
documentation/: audit-log.md  authorization-hosts.md  client_changes.md  database-agent.md  oauth.md  pdp.md  saml.md
etc/: navigator.ini
examples/: oauth2_server.py  policy_server.py  test_abac.py  test_decorators.py  test_handler.py  test_policies.py
examples/static/: callback.html  oauth2_index.html
extensions/yaml-rs/: Cargo.toml  pyproject.toml
extensions/yaml-rs/python/yaml_rs/: __init__.py
extensions/yaml-rs/src/: lib.rs
navigator_auth/: __init__.py  abac.py  auth.py  conf.py  decorators.py  exceptions.c  exceptions.pxd  exceptions.py  exceptions.pyx  identities.py  models.py  responses.py  templates.py  version.py
navigator_auth/abac/: __init__.py  audit.py  context.py  decorators.py  environment.py  errors.py  guardian.py  middleware.py  pdp.py  policies.py  policy.py  policyhandler.py
navigator_auth/abac/default_policies/: admin_full_access.yaml  business_hours_only.yaml  deny_after_hours.yaml  engineering_tools.yaml  mcp_services.yaml  readonly_agents.yaml
navigator_auth/abac/policies/: __init__.py  abstract.py  adapter.py  environment.py  evaluator.py  file.py  obj.py  policy.py  resource_policy.py  resources.py
navigator_auth/abac/storages/: __init__.py  abstract.py  db.py  pg.py  yaml_storage.py
navigator_auth/authorizations/: __init__.py  _client_ip.py  _geoip.py  _subnet.py  abstract.py  allow_hosts.py  allowed_ips.py  azure_service_tags.py  hosts.py  powerbi.py  useragent.py
navigator_auth/backends/: __init__.py  abstract.py  adfs.py  api.py  azure.py  base.py  basic.py  django.py  external.py  github.py  google.py  jwksutils.py  noauth.py  oauth.py  oauth2.py  okta.py  saml.py  token.py  troc.py
navigator_auth/backends/attributes/: __init__.py  abstract.py  internal.py
navigator_auth/backends/idp/: __init__.py  code.py
navigator_auth/backends/oauth2/: __init__.py  backend.py  client_backend.py  code_backend.py  ddl.sql  devicecode.py  models.py  pkce.py
navigator_auth/handlers/: __init__.py  allowed_ips.py  base.py  clients.py  config.py  groups.py  handler.py  info.py  model.py  orgs.py  partners.py  permissions.py  program.py  recovery.py  userattrs.py  users.py  vault.py
navigator_auth/handlers/users/: __init__.py  passwd.py  session.py  user.py
navigator_auth/libs/: __init__.py  cipher.pyx  json.cpp  json.pyx  parser.pyx  policy_eval.pyx  sanitize.py
navigator_auth/middlewares/: __init__.py  abstract.py  apikey.py  django.py  jwt.py  security.py  strategies.py  token.py  troc.py  unified.py  version.py
navigator_auth/rs_pep/: Cargo.toml
navigator_auth/rs_pep/src/: lib.rs
navigator_auth/storages/: __init__.py  abstract.py  postgres.py  redis.py
navigator_auth/vault/: __init__.py  integration.py  migrations.py
resources/: auth.py  user.py
rust/: Cargo.toml
rust/src/: lib.rs
sdd/proposals/: SPEC_oauth2_3lo.md  migrate-classic-policies-abac-rust.brainstorm.md  oauth2-3lo-implementation.brainstorm.md  oauth2-introspection-device-grant.brainstorm.md
sdd/reviews/: FEAT-002-review.md  FEAT-056-review.md  TASK-002-review.md  TASK-123-review.md
sdd/specs/: audit-log-tenant-and-query.spec.md  migrate-classic-policies-abac-rust.spec.md  oauth2-3lo-implementation.spec.md  oauth2-introspection-device-grant.spec.md  per-tenant-policy-scoping.spec.md  policy-based-access-control.spec.md  refactor-rust-pep-inpackage.spec.md
sdd/tasks/: .index.json
sdd/templates/: brainstorm.md  spec.md  task.md
templates/: .compiled
templates/auth/: login.html
templates/oauth/: consent.html  login.html
tests/: conftest.py  reproduce_options.py  reproduce_session_error.py  test_allowed.py  test_audit_backends.py  test_basic_auth.py  test_default_effect_coercion.py  test_device_authorization.py  test_device_code_storage.py  test_device_token_polling.py  test_device_verification.py  test_e2e_abac_rust.py  test_evaluator_rust.py  test_guardian_filter_resources.py  test_hot_reload.py  test_login.py  test_middleware_integration.py  test_oauth2_client_uid.py  test_oauth2_grants_revoke.py  test_oauth2_integration.py  test_oauth2_introspection.py  test_oauth2_introspection_device_integration.py  test_oauth2_p0_correctness.py  test_oauth2_pkce.py  test_oauth2_refresh.py  test_oauth2_userinfo_logout.py  test_pdp_delegation.py  test_policy.py  test_policy_adapter.py  test_policy_conditions.py  test_policy_evaluation.py  test_policy_object.py  test_powerbi_authz.py  test_resource_server_bearer.py  test_resource_types.py  test_scope_abac.py  test_tenant_scoping.py  test_tenant_sql_filtering.py  test_unified_evaluation.py  test_useragent_geo.py  (+1 more)
tests/fixtures/: test_policies.yaml
tests/unit/: test_exclude_list_mutations.py  test_exclude_provider.py  test_is_authenticated_exclude.py  test_middleware_routes.py
(+79 files in other folders)
