[build-system]
requires = [
  'setuptools>=74.0.0',
  'Cython>=3.0.11',
  'wheel>=0.44.0'
]
build-backend = "setuptools.build_meta"

[project]
name = "navigator-auth"
dynamic = ["version"]
description = "Navigator Auth is an Authentication/Authorization Toolkit for aiohttp."
readme = "README.md"
requires-python = ">=3.9.16"
license = "Apache-2.0"
authors = [
    { name = "Jesus Lara Gimenez", email = "jesuslarag@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Environment :: Web Environment",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
]
dependencies = [
    "Cython>=3.0.11",
    "PyNaCl>=1.5.0",
    "aiohttp>=3.9.5",
    "aiohttp-cors==0.8.1",
    "PyJWT>=2.10.1",
    "pycryptodome>=3.21.0",
    "rncryptor>=3.3.0",
    "msal>=1.28.0,<=1.32.0",
    "aiogoogle>=5.17.0",
    "okta-jwt-verifier>=0.2.5",
    "python-slugify>=8.0.1",
    "asyncdb>=2.8.0",
    "navconfig>=1.7.0",
    "navigator-session>=0.6.5",
    "navigator-api>=0.5.0",
    "pydantic>=2.12.5",
    "python3-saml>=1.16.0",
    "lxml>=6.0.2",
    "xmlsec>=1.3.17",
]

[project.optional-dependencies]
uvloop = ["uvloop>=0.20.0"]

[project.urls]
Homepage = "https://github.com/phenobarbital/navigator-auth"
Source = "https://github.com/phenobarbital/navigator-auth"
Funding = "https://paypal.me/phenobarbital"
Tracker = "https://github.com/phenobarbital/navigator-auth/issues"
Documentation = "https://github.com/phenobarbital/navigator-auth"

[tool.setuptools.packages.find]
where = ["."]
include = ["navigator_auth*"]
exclude = ["tests*", "docs*", "examples*"]

[tool.setuptools.dynamic]
version = {attr = "navigator_auth.version.__version__"}

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "coverage",
    "mypy",
    "pylint",
    "pre-commit",
    "black",
    "flake8"
]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = [
    "error",
    'ignore:The loop argument is deprecated since Python 3\.8, and scheduled for removal in Python 3\.10:DeprecationWarning:asyncio',
]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.uv.sources]
navigator-session = { path = "../navigator-session", editable = true }
