[package]
name = "navigator_auth_pep"
version = "0.1.0"
edition = "2021"
description = "High-performance PEP batch filter for navigator-auth PBAC"

[lib]
name = "navigator_auth_pep"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"
glob-match = "0.2"
