[package]
name = "yaml-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "yaml_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
