[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "yaml_rs"
version = "0.1.0"
description = "Fast YAML serialization using Rust and PyO3"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
python-source = "python"
module-name = "yaml_rs"
bindings = "pyo3"
features = ["pyo3/extension-module"]
